--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,7 @@
         <h3>Game Summary</h3>
         <h5>Level : Easy</h5>
         <h5>Bullets: 5</h5>
+        <h5>Score: 0</h5>
       </div>
     </div>
   </body>
