--- a/index.html
+++ b/index.html
@@ -13,6 +13,56 @@
         let totalMarginVertical = 0;
         let topMargin = 100;
         let theLeftMargin = 0;
+        let isFired = false;
+        let bullet = $("#bullet");
+        let theft = $("#thieft");
+        let police = $("#police");
+        let originalBulletPosition = "position: absolute; bottom: 150px;";
+
+        setInterval(function () {
+          if (isFired) {
+            let x = $(bullet).css("bottom");
+            // let thieftXPosition=$("#thieft").css("")
+            let y = parseInt(x);
+
+            let tPosition = $(theft).position();
+            let bPosition = $(bullet).position();
+            let pPosition = $(police).position();
+
+            if (bPosition.top > 20) {
+              $(bullet).css("bottom", y + 20 + "px");
+            } else {
+              //$(bullet).position("top", pPosition.top + 20 + "px");
+              $(bullet).css("bottom", 150 + "px");
+              $(bullet).css("margin-left", $(police).css("margin-left"));
+              isFired = false;
+              //$(bullet).css(originalBulletPosition)
+            }
+            console.log(
+              document.documentElement.clientHeight,
+              bPosition.top,
+              $("#thieft").position().top,
+              bPosition.left,
+              parseInt($(theft).css("margin-left"))
+            );
+            if (
+              Math.abs(bPosition.top - parseInt($(theft).css("margin-top"))) <
+                50 &&
+              Math.abs(
+                parseInt($(bullet).css("margin-left")) -
+                  parseInt($(theft).css("margin-left"))
+              ) < 200
+            ) {
+              isFired = false;
+
+              $(bullet).css("bottom", 150 + "px");
+              $(bullet).css("margin-left", $(police).css("margin-left"));
+            } else {
+            }
+
+            //console.log("hdhhdh" + x);
+          }
+        }, 100);
 
         setInterval(function () {
           for (let i = 0; i < 14; i++) {
@@ -41,9 +91,24 @@
           // Coordinates relative to the document
           const mouseX = event.pageX;
           let police = $("#police").css("margin-left", mouseX + "px");
+
+          if (!isFired) {
+            $("#bullet").css("margin-left", mouseX + 100 + "px");
+          }
+        });
+        $(document).ready(function () {
+          $(document).on("click", function (event) {
+            isFired = true;
+          });
         });
       });
     </script>
+    <style>
+      .container {
+        display: flex;
+        flex-direction: column;
+      }
+    </style>
   </head>
   <body>
     <img
@@ -53,18 +118,25 @@
       ,
       height="100px"
       alt="armed_guy"
-    />\
-    <br />
-    <div>
-      <img src="./bullet-fire.jpeg" alt="" width="50px" height="50px">
-      <img
-      style="position: absolute; bottom: 0px"
-      src="./armed_guy.jpeg"
-      alt=""
-      id="police"
     />
-
+    <br />
+    <div class="container">
+      <img
+        src="./bullet-fire.jpeg"
+        style="position: absolute; bottom: 150px"
+        id="bullet"
+        alt=""
+        width="50px"
+        height="50px"
+      />
+      <img
+        style="position: absolute; bottom: 0px"
+        src="/images/police_shooting.png"
+        alt=""
+        id="police"
+        width="100px"
+        height="100px"
+      />
     </div>
-    
   </body>
 </html>
